Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
Minor
-
Resolution: Fixed
-
Affects Version/s: Impala 2.10.0
-
Fix Version/s: Impala 2.10.0
-
Component/s: Backend
-
Labels:
-
Target Version:
-
Epic Color:ghx-label-3
Description
Queries with a null-aware anti-join joining on a large number of NULLs can take a long time to cancel if threads are stuck in PartitionedHashJoinNode::EvaluateNullProbe().
Reproduction:
- Run this query against tpch_parquet:
select l_orderkey, l_partkey, l_suppkey, l_linenumber from lineitem where if(l_orderkey % 2 = 0, NULL, l_partkey) not in ( select p_partkey from part where p_retailprice < l_extendedprice * l_tax) order by 1,2,3,4
- Cancel it
- See Impala still consuming CPU in EvaluateNullProbe() for a long time after cancellation